# LifeGame

./: .gitignore  CMakeLists.txt  FieldProcessor.cpp  FieldProcessor.h  README.md  conanfile.py  main.cpp
.ci/: prebuild_thirdparty.py
.ci/conan_profiles/: conan_profile_linux_release
.ci/conan_profiles/Android/Release/: host_android_arm64-v8a_release
.github/workflows/: cicd.yml  release.yml
QAs/: CMakeLists.txt  Tests.cpp
